# Rasterizer

./: .gitignore
the2/: CMakeCache.txt  CMakeLists.txt  Camera.h  CameraHandler.cpp  CameraHandler.h  GeneratedMesh.cpp  GeneratedMesh.h  Helpers.cpp  Helpers.h  Main.cpp  Makefile  Scene.cpp  Transformation.cpp  Transformation.h  Translation.h  Triangle.h.gch  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  code_base.cpp  code_base.h.gch  rasterizer  the2  the2.cpp  the2.h  tinyxml2.h.gch
the2/code_base/: CMakeLists.txt  code_base.h
